--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    </head>
    
    <body>
+     <!-- test -->
       <div class = "container">
          <h1>Toy MillsThiiiss paassge is using Bootstrap and jQuery!</h1>
          <h3 id = "click-counter"></h3>
